[package]
name = "penrose-finch"
version = "0.1.0"
authors = ["Arno Dupont <arno.dupont.pro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { git = "https://github.com/sminez/penrose" }
simplelog = "0.8"
